--- a/richu_web/assets/less/main.less
+++ b/richu_web/assets/less/main.less
@@ -1,8 +1,21 @@
-@import 'variable.less';
+@import "variable.less";
 
 @font-face {
-  font-family: regularFont;
-  src: url(../fonts/Poppins-Regular.ttf)
+  font-family: regularPoppins;
+  src: url(../fonts/Poppins-Regular.ttf);
+}
+
+@font-face {
+  font-family: boldPoppins;
+  src: url(../fonts/Poppins-Bold.ttf);
+}
+
+.en-r-po {
+  font-family: regularPoppins;
+}
+
+.en-b-po {
+  font-family: boldPoppins;
 }
 
 body,
@@ -13,7 +26,7 @@ th {
   color: #434343;
 }
 
-// 通用样式 
+// 通用样式
 html,
 body {
   height: 100%;
@@ -23,7 +36,7 @@ body {
 }
 
 * {
-  font-family: "Microsoft YaHei"
+  font-family: "Microsoft YaHei";
 }
 
 a {
@@ -121,7 +134,6 @@ a {
             }
           }
         }
-
       }
 
       .h-search {
@@ -174,7 +186,7 @@ a {
         .hamburger-inner::after {
           width: 30px;
           height: 3px;
-          background-color: rgba(255, 255, 255, .8);
+          background-color: rgba(255, 255, 255, 0.8);
         }
       }
     }
@@ -184,7 +196,7 @@ a {
     overflow: hidden;
     display: none;
     width: 100%;
-    background: rgba(255, 255, 255, .9);
+    background: rgba(255, 255, 255, 0.9);
     position: fixed;
     top: 60px;
     left: 0;
@@ -212,7 +224,6 @@ a {
   }
 }
 
-
 .under-nav {
   margin-top: 150px;
 }
@@ -225,7 +236,7 @@ a {
 .footer {
   .btn-scroll-top {
     height: 54px;
-    background: #F6F8F6;
+    background: #f6f8f6;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -285,7 +296,7 @@ a {
         font-size: 16px;
         line-height: 16px;
         color: #333333;
-        border-bottom: 1px solid #E6E9E6;
+        border-bottom: 1px solid #e6e9e6;
 
         &:hover {
           color: @main-color;
@@ -301,7 +312,7 @@ a {
           position: relative;
 
           &:before {
-            content: '';
+            content: "";
             position: absolute;
             top: 3px;
             left: 4px;
@@ -311,7 +322,6 @@ a {
             border-top: 1px solid #fff;
             border-right: 1px solid #fff;
             transform: rotate(45deg);
-
           }
         }
       }
@@ -349,6 +359,8 @@ a {
 
         .share-mf {
           margin-top: 15px;
+          display: flex;
+          align-items: center;
 
           .icon {
             width: 18px;
@@ -360,26 +372,28 @@ a {
             background-position: 0 0 !important;
 
             &:first-child {
-              background-image: url('../img/qq.svg');
+              width: 16px;
+              height: 16px;
+              background-image: url("../img/qq.svg");
 
               &:hover {
-                background-image: url('../img/qq-ac.svg');
+                background-image: url("../img/qq-ac.svg");
               }
             }
 
             &:nth-child(2) {
-              background-image: url('../img/wechat.svg');
+              background-image: url("../img/wechat.svg");
 
               &:hover {
-                background-image: url('../img/wechat-ac.svg');
+                background-image: url("../img/wechat-ac.svg");
               }
             }
 
             &:last-child {
-              background-image: url('../img/weibo.svg');
+              background-image: url("../img/weibo.svg");
 
               &:hover {
-                background-image: url('../img/weibo-ac.svg');
+                background-image: url("../img/weibo-ac.svg");
               }
             }
           }
@@ -414,8 +428,8 @@ a {
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
-  transition: linear .5s all;
-  -webkit-transition: linear .5s all;
+  transition: linear 0.5s all;
+  -webkit-transition: linear 0.5s all;
   visibility: hidden;
   opacity: 0;
   transform: rotateX(-35deg);
@@ -449,7 +463,7 @@ a {
     position: relative;
 
     &:before {
-      content: '';
+      content: "";
       position: absolute;
       display: inline-block;
       top: 50%;
@@ -512,7 +526,7 @@ a {
       position: absolute;
       top: 12px;
       left: -22px;
-      content: '';
+      content: "";
       display: inline-block;
       width: 10px;
       height: 10px;
@@ -622,9 +636,9 @@ a {
 
     .en-title {
       font-size: 16px;
-      font-family: Poppins;
+      font-family: boldPoppins;
       font-weight: bold;
-      color: #7B7B7B;
+      color: #7b7b7b;
       margin-bottom: 22px;
       text-align: left;
     }
@@ -655,7 +669,6 @@ a {
     }
 
     .news-list {
-
       .news-item {
         display: block;
         margin-left: 16px;
@@ -679,7 +692,7 @@ a {
           position: absolute;
           top: 8px;
           left: -18px;
-          content: '';
+          content: "";
           display: inline-block;
           width: 6px;
           height: 6px;
@@ -690,9 +703,7 @@ a {
       }
     }
   }
-
 }
-
 
 // about
 .about-top-banner {
@@ -705,7 +716,7 @@ a {
 .about-tab-container {
   background: #fff;
   width: 100%;
-  border-bottom: 1px solid #D5D5D5;
+  border-bottom: 1px solid #d5d5d5;
   display: flex;
 
   &.tab-fixed-top {
@@ -728,14 +739,14 @@ a {
     user-select: none;
 
     &:nth-child(1) {
-      border-right: 1px solid #D5D5D5;
+      border-right: 1px solid #d5d5d5;
     }
 
     &.active span:before {
       position: absolute;
       top: 20px;
       left: -18px;
-      content: '';
+      content: "";
       display: inline-block;
       width: 10px;
       height: 10px;
@@ -746,7 +757,7 @@ a {
     }
 
     &:hover span {
-      color: rgba(0, 127, 104, .6);
+      color: rgba(0, 127, 104, 0.6);
     }
 
     span {
@@ -767,8 +778,8 @@ a {
 
   .en-title {
     font-size: 16px;
-    font-family: Poppins;
-    color: #7B7B7B;
+    font-family: regularPoppins;
+    color: #7b7b7b;
     text-align: center;
     margin-bottom: 10px;
   }
@@ -811,7 +822,7 @@ a {
         font-size: 48px;
         line-height: 55px;
         font-weight: bold;
-        font-family: Poppins;
+        font-family: boldPoppins;
         color: @main-color;
         margin-bottom: 15px;
       }
@@ -849,7 +860,7 @@ a {
         position: relative;
 
         &:not(:last-child):after {
-          content: '';
+          content: "";
           position: absolute;
           bottom: 0;
           left: 0;
@@ -857,7 +868,7 @@ a {
           width: 95%;
           max-width: 650px;
           height: 1px;
-          background: #EBEBEB;
+          background: #ebebeb;
         }
 
         .item-l {
@@ -887,8 +898,6 @@ a {
             color: #606060;
             margin-bottom: 15px;
           }
-
-
         }
       }
     }
@@ -904,10 +913,7 @@ a {
     max-width: 1435px;
     margin: 0 auto 145px;
   }
-
 }
-
-
 
 // 集团产业
 .project-top-banner {
@@ -929,7 +935,7 @@ a {
 .project-tab-container {
   .project-tab {
     width: 100%;
-    border-bottom: 1px solid #D5D5D5;
+    border-bottom: 1px solid #d5d5d5;
     background: #fff;
     display: flex;
 
@@ -956,7 +962,7 @@ a {
         position: absolute;
         top: 20px;
         left: -18px;
-        content: '';
+        content: "";
         display: inline-block;
         width: 10px;
         height: 10px;
@@ -967,7 +973,7 @@ a {
       }
 
       &:hover span {
-        color: rgba(0, 127, 104, .6);
+        color: rgba(0, 127, 104, 0.6);
 
         // &:before {
         //   position: absolute;
@@ -983,7 +989,7 @@ a {
       }
 
       &:not(:last-child) {
-        border-right: 1px solid #D5D5D5;
+        border-right: 1px solid #d5d5d5;
       }
 
       span {
@@ -1064,7 +1070,7 @@ a {
 
           .fx-title-en {
             font-size: 16px;
-            font-family: Poppins;
+            font-family: boldPoppins;
             color: #606060;
             font-weight: bold;
             text-align: center;
@@ -1084,7 +1090,7 @@ a {
             max-width: 860px;
             margin: 0 auto;
             font-size: 16px;
-            color: #7F7F7F;
+            color: #7f7f7f;
             text-align: center;
             margin-bottom: 60px;
             line-height: 32px;
@@ -1102,14 +1108,14 @@ a {
             .num {
               display: inline-block;
               font-size: 20px;
-              color: #006B63;
+              color: #006b63;
               font-weight: bold;
               font-family: Microsoft YaHei;
 
               span {
                 padding-left: 6px;
                 font-size: 14px;
-                color: #C0C0C0;
+                color: #c0c0c0;
                 font-weight: normal;
               }
             }
@@ -1119,7 +1125,7 @@ a {
               margin: 0 18px;
               width: 1px;
               height: 14px;
-              background: #C0C0C0;
+              background: #c0c0c0;
             }
           }
 
@@ -1176,7 +1182,7 @@ a {
 
               .company-desc {
                 font-size: 16px;
-                color: #7F7F7F;
+                color: #7f7f7f;
                 line-height: 32px;
               }
             }
@@ -1215,7 +1221,7 @@ a {
               .a4-item {
                 width: 50%;
                 padding: 25px 10px;
-                border: 1px solid #C0C0C0;
+                border: 1px solid #c0c0c0;
               }
             }
 
@@ -1231,7 +1237,7 @@ a {
               .table-col {
                 min-width: 250px;
                 padding: 0 10px;
-                border-right: 1px solid #C4C4C4;
+                border-right: 1px solid #c4c4c4;
 
                 .title {
                   height: 108px;
@@ -1240,7 +1246,7 @@ a {
                   align-items: center;
                   text-align: center;
                   font-size: 18px;
-                  font-family: Poppins;
+                  font-family: boldPoppins;
                   font-weight: bold;
                   color: rgba(0, 127, 104, 1);
                   line-height: 24px;
@@ -1252,7 +1258,7 @@ a {
                   justify-content: center;
                   align-items: center;
                   font-size: 16px;
-                  font-family: Poppins;
+                  font-family: regularPoppins;
                   font-weight: 400;
                   color: rgba(127, 127, 127, 1);
                   line-height: 24px;
@@ -1271,7 +1277,7 @@ a {
 
             .title-en-sm {
               font-size: 16px;
-              font-family: Poppins;
+              font-family: boldPoppins;
               color: #333;
               font-weight: bold;
               line-height: 24px;
@@ -1304,7 +1310,7 @@ a {
 
                 .c-content {
                   font-size: 16px;
-                  color: #7F7F7F;
+                  color: #7f7f7f;
                   line-height: 32px;
                 }
               }
@@ -1319,7 +1325,6 @@ a {
               }
             }
           }
-
         }
       }
 
@@ -1336,7 +1341,7 @@ a {
 
         .title-en {
           font-size: 16px;
-          font-family: Poppins;
+          font-family: boldPoppins;
           color: #333333;
           font-weight: bold;
           text-align: center;
@@ -1394,7 +1399,6 @@ a {
       background: @main-color;
     }
   }
-
 }
 
 // 新闻动态
@@ -1564,7 +1568,6 @@ a {
     }
 
     &:hover {
-
       &.p-pre img {
         margin-right: 5px;
       }
@@ -1724,7 +1727,7 @@ a {
 .culture-tab-container {
   .culture-tab {
     width: 100%;
-    border-bottom: 1px solid #D5D5D5;
+    border-bottom: 1px solid #d5d5d5;
     background: #fff;
     display: flex;
 
@@ -1751,7 +1754,7 @@ a {
         position: absolute;
         top: 20px;
         left: -18px;
-        content: '';
+        content: "";
         display: inline-block;
         width: 10px;
         height: 10px;
@@ -1762,7 +1765,7 @@ a {
       }
 
       &:hover span {
-        color: rgba(0, 127, 104, .6);
+        color: rgba(0, 127, 104, 0.6);
 
         // &:before {
         //   position: absolute;
@@ -1778,7 +1781,7 @@ a {
       }
 
       &:not(:last-child) {
-        border-right: 1px solid #D5D5D5;
+        border-right: 1px solid #d5d5d5;
       }
 
       span {
@@ -1854,7 +1857,7 @@ a {
               }
 
               &:after {
-                content: '';
+                content: "";
                 position: absolute;
                 top: 50%;
                 left: 22px;
@@ -1952,7 +1955,7 @@ a {
   margin: 0 auto;
   padding: 105px 30px;
   overflow: hidden;
-  background: #FAFAFA;
+  background: #fafafa;
 
   .search-input-row {
     width: 100%;
@@ -1976,8 +1979,8 @@ a {
       height: 46px;
       margin: 0 6px 40px;
       padding: 0 25px;
-      border: 2px solid #006B63;
-      background: #006B63;
+      border: 2px solid #006b63;
+      background: #006b63;
       border-radius: 23px;
       line-height: 46px;
 
@@ -2020,14 +2023,13 @@ a {
           color: #999;
         }
       }
-
     }
   }
 
   .s-keyword {
     font-size: 25px;
     font-weight: bold;
-    color: #006B63;
+    color: #006b63;
     line-height: 32px;
     text-align: center;
     margin-bottom: 70px;
@@ -2051,11 +2053,11 @@ a {
 
 @keyframes locationJump {
   from {
-    top: -14px
+    top: -14px;
   }
 
   to {
-    top: -20px
+    top: -20px;
   }
 }
 
@@ -2110,6 +2112,7 @@ a {
 
       .c-text {
         font-size: 14px;
+        font-family: regularPoppins;
         color: #606060;
         line-height: 24px;
       }
@@ -2191,7 +2194,7 @@ a {
       .c-name {
         font-size: 16px;
         font-weight: bold;
-        color: #007F68;
+        color: #007f68;
         line-height: 24px;
         margin-bottom: 20px;
       }
@@ -2221,7 +2224,7 @@ a {
       }
 
       &:after {
-        content: '';
+        content: "";
         position: absolute;
         bottom: 0;
         left: 20px;
@@ -2234,10 +2237,6 @@ a {
     }
   }
 }
-
-
-
-
 
 // 公共
 .small-font-link {
@@ -2253,7 +2252,7 @@ a {
   position: relative;
 
   &:before {
-    content: '';
+    content: "";
     position: absolute;
     top: 7px;
     left: -18px;
@@ -2276,8 +2275,8 @@ a {
 
 .en-title {
   font-size: 16px;
-  font-family: Poppins;
-  color: #7B7B7B;
+  font-family: boldPoppins;
+  color: #7b7b7b;
   font-weight: bold;
   text-align: center;
   margin-bottom: 10px;
@@ -2334,7 +2333,7 @@ a {
       }
 
       &:hover {
-        background: rgba(255, 255, 255, .3);
+        background: rgba(255, 255, 255, 0.3);
 
         &.last-page {
           padding-bottom: 5px;
@@ -2383,7 +2382,6 @@ a {
       &>* {
         border-radius: 50%;
       }
-
     }
   }
 }
@@ -2397,14 +2395,14 @@ a {
   .btn-cir-green {
     width: 100%;
     height: 100%;
-    background: #006B63;
+    background: #006b63;
     border-radius: 22px;
     font-size: 18px;
-    color: #FEFEFE;
+    color: #fefefe;
     line-height: 46px;
     cursor: pointer;
     padding: 0 25px;
-    border: 2px solid #006B63;
+    border: 2px solid #006b63;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -2447,7 +2445,7 @@ a {
     transform: translateX(-50%);
     border-radius: 8px;
     background: #fff;
-    box-shadow: 0 0 5px 2px rgba(150, 150, 150, .3);
+    box-shadow: 0 0 5px 2px rgba(150, 150, 150, 0.3);
     overflow: hidden;
 
     .rc-proj-select {
@@ -2506,7 +2504,6 @@ a {
 
 // 产品弹窗
 .fx-project-wrap {
-
   .fx-project-sq-row {
     width: 100%;
     max-width: 1546px;
@@ -2520,7 +2517,7 @@ a {
       width: 100%;
       max-width: 160px;
       height: 160px;
-      border: 6px solid #EDEDED;
+      border: 6px solid #ededed;
       margin-right: -6px;
       margin-top: -6px;
       display: flex;
@@ -2540,13 +2537,14 @@ a {
 
       .cn {
         font-size: 18px;
-        color: #4A5A5C;
+        color: #4a5a5c;
         margin-bottom: 5px;
         display: inline-block;
       }
 
       .en {
         font-size: 14px;
+        font-family: regularPoppins;
         color: #606060;
         display: inline-block;
       }
@@ -2592,7 +2590,7 @@ a {
           .t-b-line {
             width: 90%;
             height: 1px;
-            background: #EBEBEB;
+            background: #ebebeb;
             margin: 25px 5px 25px;
           }
 
@@ -2604,7 +2602,7 @@ a {
             position: relative;
 
             &:before {
-              content: '';
+              content: "";
               position: absolute;
               top: 4px;
               left: 5px;
@@ -2624,7 +2622,7 @@ a {
 
             .d-text {
               font-size: 18px;
-              color: #A3A3A3;
+              color: #a3a3a3;
             }
           }
 
@@ -2642,7 +2640,7 @@ a {
 
             .d-text {
               font-size: 18px;
-              color: #A3A3A3;
+              color: #a3a3a3;
             }
           }
         }
@@ -2688,7 +2686,6 @@ a {
     }
   }
 }
-
 
 .bd_weixin_popup {
   width: 255px !important;
