--- a/richu_web/assets/less/response.less
+++ b/richu_web/assets/less/response.less
@@ -1,7 +1,7 @@
-@import 'variable.less';
+@import "variable.less";
 
 /* CSS Document */
-@media screen and (min-width: 320px) and (max-width:499px) {
+@media screen and (min-width: 320px) and (max-width: 499px) {
   .index-section {
     visibility: visible;
     opacity: 1;
@@ -574,9 +574,11 @@
         width: 100%;
         margin-bottom: 15px;
 
-        .arrow-left {}
+        .arrow-left {
+        }
 
-        .arrow-right {}
+        .arrow-right {
+        }
       }
     }
   }
@@ -784,7 +786,7 @@
   }
 }
 
-@media screen and (min-width: 500px) and (max-width:639px) {
+@media screen and (min-width: 500px) and (max-width: 639px) {
   .index-section {
     visibility: visible;
     opacity: 1;
@@ -1155,9 +1157,11 @@
         width: 100%;
         margin-bottom: 15px;
 
-        .arrow-left {}
+        .arrow-left {
+        }
 
-        .arrow-right {}
+        .arrow-right {
+        }
       }
     }
   }
@@ -1241,7 +1245,7 @@
   }
 }
 
-@media screen and (min-width: 640px) and (max-width:767px) {
+@media screen and (min-width: 640px) and (max-width: 767px) {
   .index-fixed-pagination {
     right: 10px;
     bottom: 10px;
@@ -1544,7 +1548,6 @@
     margin-bottom: 60px;
   }
 
-
   .ri-chu-about {
     padding-top: 70px;
 
@@ -1595,7 +1598,7 @@
   }
 }
 
-@media screen and (min-width: 768px) and (max-width:991px) {
+@media screen and (min-width: 768px) and (max-width: 991px) {
   .index-fixed-pagination {
     right: 10px;
     bottom: 10px;
@@ -1789,7 +1792,7 @@
   }
 }
 
-@media screen and (min-width: 992px) and (max-width:1199px) {
+@media screen and (min-width: 992px) and (max-width: 1199px) {
   .index-fixed-pagination {
     right: 10px;
     bottom: 10px;
@@ -1952,7 +1955,7 @@
   }
 }
 
-@media screen and (min-width: 1200px) and (max-width:1499px) {
+@media screen and (min-width: 1200px) and (max-width: 1499px) {
   .index-fixed-pagination {
     right: 10px;
     bottom: 10px;
@@ -2022,10 +2025,14 @@
             }
 
             .verify-pic-row {
-              flex-direction: column;
-
               .two-a4-image {
-                margin-bottom: 50px;
+                margin-right: 20px;
+              }
+
+              .right-table {
+                .table-col {
+                  min-width: 200px;
+                }
               }
             }
           }
@@ -2043,7 +2050,7 @@
   }
 }
 
-@media screen and (min-width: 1500px) and (max-width:1680px) {
+@media screen and (min-width: 1500px) and (max-width: 1680px) {
   .project-tab-container {
     .project-content {
       .proj-content-item {
@@ -2070,10 +2077,8 @@
             }
 
             .verify-pic-row {
-              flex-direction: column;
-
               .two-a4-image {
-                margin-bottom: 50px;
+                margin-right: 20px;
               }
             }
           }
@@ -2081,10 +2086,9 @@
       }
     }
   }
-
 }
 
-@media screen and (max-width:1350px) {
+@media screen and (max-width: 1350px) {
   .contact-tab-container {
     .contact-map {
       display: none;
@@ -2094,48 +2098,43 @@
       display: block;
     }
   }
-
 }
 
-
-@media screen and (min-width: 768px) and (max-width:1199px) {
+@media screen and (min-width: 768px) and (max-width: 1199px) {
   .index-section .index-pager-wrap .i-p-pager {
     right: -40px;
   }
 }
 
-@media screen and (min-width: 1500px) and (max-width:1700px) {
+@media screen and (min-width: 1500px) and (max-width: 1700px) {
   .index-section .index-pager-wrap .i-p-pager {
     right: -15px;
   }
 }
 
-@media screen and (min-width: 1700px) and (max-width:1749px) {
+@media screen and (min-width: 1700px) and (max-width: 1749px) {
   .index-section .index-pager-wrap .i-p-pager {
     right: -2%;
   }
 }
 
-@media screen and (min-width: 1750px) and (max-width:1799px) {
+@media screen and (min-width: 1750px) and (max-width: 1799px) {
   .index-section .index-pager-wrap .i-p-pager {
     right: -4%;
   }
 }
 
-@media screen and (min-width: 1800px) and (max-width:1849px) {
+@media screen and (min-width: 1800px) and (max-width: 1849px) {
   .index-section .index-pager-wrap .i-p-pager {
     right: -5%;
   }
 }
 
-@media screen and (min-width: 1850px) and (max-width:1900px) {
+@media screen and (min-width: 1850px) and (max-width: 1900px) {
   .index-section .index-pager-wrap .i-p-pager {
     right: -6%;
   }
 }
-
-
-
 
 // header
 @media screen and (min-width: 850px) and (max-width: 1199px) {
@@ -2184,7 +2183,6 @@
       }
     }
   }
-
 }
 
 @media screen and (min-width: 500px) and (max-width: 849px) {
@@ -2197,7 +2195,6 @@
 
     .h-content {
       .h-logo {
-
         img {
           width: 100%;
           height: 100%;
@@ -2247,7 +2244,7 @@
 }
 
 // footer
-@media screen and (min-width: 825px) and (max-width:1800px) {
+@media screen and (min-width: 825px) and (max-width: 1800px) {
   .footer {
     .f-main {
       .link-group {
@@ -2265,7 +2262,7 @@
           }
 
           &:nth-child(2) {
-            max-width: 40%;
+            max-width: 60%;
           }
 
           .share-mf {
@@ -2279,7 +2276,7 @@
   }
 }
 
-@media screen and (min-width: 640px) and (max-width:824px) {
+@media screen and (min-width: 640px) and (max-width: 824px) {
   .footer {
     .f-main {
       height: auto;
@@ -2322,7 +2319,7 @@
   }
 }
 
-@media screen and (min-width: 320px) and (max-width:639px) {
+@media screen and (min-width: 320px) and (max-width: 639px) {
   .footer {
     .f-main {
       height: auto;
