适配Mac首页滚动

--- a/richu_web/assets/css/response.css
+++ b/richu_web/assets/css/response.css
@@ -1418,23 +1418,19 @@
     padding-right: 15px;
   }
   .project-tab-container .project-content .proj-content-item .content-tab-wrap .content-detail .company-info-row {
-    flex-wrap: wrap;
-    justify-content: space-around;
-    max-width: 990px;
+    padding-right: 0;
   }
   .project-tab-container .project-content .proj-content-item .content-tab-wrap .content-detail .company-info-row .row-left {
-    width: 100%;
-    margin-bottom: 50px;
+    padding-right: 10px;
+    width: 34%;
     margin-right: 0;
-    text-align: center;
   }
   .project-tab-container .project-content .proj-content-item .content-tab-wrap .content-detail .company-info-row .row-right {
-    width: 100%;
-    flex-wrap: wrap;
-    justify-content: center;
+    width: 65%;
+    justify-content: flex-end;
   }
   .project-tab-container .project-content .proj-content-item .content-tab-wrap .content-detail .company-info-row .row-right img {
-    margin: 10px;
+    margin: 8px;
   }
   .project-tab-container .project-content .proj-content-item .content-tab-wrap .content-detail .verify-pic-row .two-a4-image {
     margin-right: 20px;
@@ -1446,18 +1442,44 @@
     padding: 25px;
   }
 }
+@media screen and (min-width: 1200px) and (max-width: 1300px) {
+  .project-tab-container .project-content .proj-content-item .content-tab-wrap .content-detail {
+    padding-left: 15px;
+    padding-right: 15px;
+  }
+  .project-tab-container .project-content .proj-content-item .content-tab-wrap .content-detail .company-info-row {
+    padding-right: 0;
+  }
+  .project-tab-container .project-content .proj-content-item .content-tab-wrap .content-detail .company-info-row .row-left {
+    width: 34%;
+    margin-right: 0;
+  }
+  .project-tab-container .project-content .proj-content-item .content-tab-wrap .content-detail .company-info-row .row-right {
+    width: 65%;
+    justify-content: flex-start;
+  }
+  .project-tab-container .project-content .proj-content-item .content-tab-wrap .content-detail .company-info-row .row-right img {
+    margin: 8px;
+  }
+  .project-tab-container .project-content .proj-content-item .content-tab-wrap .content-detail .company-info-row .row-right img:first-child {
+    width: 63%;
+  }
+  .project-tab-container .project-content .proj-content-item .content-tab-wrap .content-detail .company-info-row .row-right img:last-child {
+    width: 34%;
+  }
+}
 @media screen and (min-width: 1500px) and (max-width: 1680px) {
   .project-tab-container .project-content .proj-content-item .content-tab-wrap .content-detail {
     padding-left: 15px;
     padding-right: 15px;
   }
   .project-tab-container .project-content .proj-content-item .content-tab-wrap .content-detail .company-info-row .row-left {
-    width: 38%;
+    padding-left: 30px;
+    width: 40%;
     margin-right: 0;
   }
   .project-tab-container .project-content .proj-content-item .content-tab-wrap .content-detail .company-info-row .row-right {
-    width: 60%;
-    flex-wrap: wrap;
+    width: 58%;
     justify-content: flex-start;
   }
   .project-tab-container .project-content .proj-content-item .content-tab-wrap .content-detail .company-info-row .row-right img {
